opam-version: "2.0"
maintainer:   "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors:      ["Thomas Gazagnaire <thomas@gazagnaire.org>" "Stefanie Schirmer" "Hannes Mehnert"]
homepage:     "https://github.com/mirage/mirage-kv"
doc:          "https://mirage.github.io/mirage-kv/"
license:      "ISC"
dev-repo:     "git+https://github.com/mirage/mirage-kv.git"
bug-reports:  "https://github.com/mirage/mirage-kv/issues"
tags:         ["org:mirage"]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml"     {>= "4.05.0"}
  "dune"      {build}
  "mirage-kv" {>= "2.0.0"}
  "async"
  "cstruct"
]

synopsis: "MirageOS signatures for key/value devices"
description: """
mirage-kv-async provides the `Mirage_kv_async.RO` and `Mirage_kv_async.RW` signatures,
which are the corresponding `Mirage_kv` signatures with `io` constrained to
`Async.Deferred.t` and `value` to `string`.
"""
