opam-version: "1.2"
maintainer:   "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors:      ["Thomas Gazagnaire <thomas@gazagnaire.org>"]
homepage:     "https://github.com/mirage/mirage-kv"
doc:          "https://mirage.github.io/mirage-kv/"
license:      "ISC"
dev-repo:     "https://github.com/mirage/mirage-kv.git"
bug-reports:  "https://github.com/mirage/mirage-kv/issues"
tags:         ["org:mirage"]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune"      {build}
  "mirage-kv" {>= "1.0.0"}
  "lwt"
  "cstruct"
]

available: [ ocaml-version >= "4.01.0"]
