opam-version: "2.0"
maintainer:   "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors:      ["Thomas Gazagnaire <thomas@gazagnaire.org>"]
homepage:     "https://github.com/mirage/mirage-kv"
doc:          "https://mirage.github.io/mirage-kv/"
license:      "ISC"
dev-repo:     "git+https://github.com/mirage/mirage-kv.git"
bug-reports:  "https://github.com/mirage/mirage-kv/issues"
tags:         ["org:mirage"]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml"     {>= "4.03.0"}
  "dune"      {build}
  "mirage-kv" {>= "1.0.0"}
  "lwt"
  "cstruct"
]

synopsis: "MirageOS signatures for key/value devices"
